Updata mutant processor